triage_party/triageparty_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triageparty
  namespace: triageparty
spec:
  selector:
    matchLabels:
      app: triageparty
  template:
    metadata:
      labels:
        app: triageparty
    spec:
      containers:
      - name: triageparty
        image: triageparty/triage-party:1.3.0
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        configMap:
          name: triageparty-config
