triage_party/triageparty_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triageparty
  namespace: triageparty
spec:
  selector:
    app: triageparty
  ports:
  - name: main
    port: 80
    targetPort: 8080
    protocol: TCP
