triage_party/triageparty_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: prod-nginx
    kubernetes.io/tls-acme: "true"
  name: triageparty-ingress
  namespace: triageparty
spec:
  rules:
  - host: triage.build-infra.jetstack.net
    http:
      paths:
      - backend:
          service:
            name: triageparty
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - triage.build-infra.jetstack.net
    secretName: triageparty-tls
